# udev-hid-bpf

./: .editorconfig  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  81-hid-bpf.rules.in  99-hid-bpf.rules  99-hid-bpf.rules.in  Cargo.toml  README.md  build.rs  install.sh  kb-bl.py  make_release.sh  meson.build  meson_options.txt  release_install.sh  release_install.sh.in  release_uninstall.sh  release_uninstall.sh.in  udev-hid-bpf.man  uninstall.sh
.gitlab-ci/: fedora-37.patch  install.sh.jinja  kernel-build.sh  make-combined-release.sh  make-config.sh  make-release.py  rustup.sh  start-in-systemd.sh  uninstall.sh.jinja
bpf/: meson.build
doc/: conf.py  device-matches.rst  example-report-descriptor.rst  filename-conventions.rst  getting-started.rst  hid-primer.rst  how-it-works.rst  huion-keydial-kd20.rst  index.rst  metadata.rst  other-resources.rst  report-descriptor-macros.rst  stable-testing-userhacks.rst  tutorial.rst  udev-properties.rst
src/: attach_wrapper.h  bpf.rs  hid_bpf_wrapper.h  hidudev.rs  main.rs  meson.build  modalias.rs
src/bpf/: G10-Mechanical-Gaming-Mouse.bpf.c  HP_Elite_Presenter.bpf.c  Kaliber-MMOmentum.bpf.c  XBox_Elite_2.bpf.c  attach.bpf.c  attach.h  b0003g0001v*p*-debug-usb.bpf.c  b0003g0001v000004D9p0000A09F-mouse.bpf.c  b0003g0001v0000258Ap00000027-Kaliber-MMOmentum.bpf.c  b0003g0001v04d9pa09f-mouse.bpf.c  b0003g0001v258Ap0027-Kaliber-MMOmentum.bpf.c  b0005g0001v000003F0p0000464A-HP_Elite_Presenter.bpf.c  hid_bpf.h  hid_bpf_helpers.h  hid_report_helpers.h  meson.build  trace_hid_events.bpf.c  uhid-bpf-test-wrappers.h  vmlinux.h  xppen-Artist24.bpf.c  xppen-ArtistPro16Gen2.bpf.c
src/bpf/stable/: 10-XPPen__Artist24.bpf.c  meson.build
src/bpf/testing/: 0010-ASUS__Vivobook_S15_S5507_kbd.bpf.c  0010-Huion__KeydialK20.bpf.c  10-FR-TEC__Raptor-Mach-2.bpf.c  10-Huion__Dial-2.bpf.c  10-Huion__Inspiroy-2-S.bpf.c  10-Kaliber-MMOmentum.bpf.c  10-Thrustmaster__TCA-Yoke-Boeing.bpf.c  10-XPPen__ArtistPro16Gen2.bpf.c  10-XPPen__DecoMini4.bpf.c  HP_Elite_Presenter.bpf.c  Kaliber-MMOmentum.bpf.c  Wacom-ArtPen.bpf.c  XBox_Elite_2.bpf.c  meson.build  xppen-Artist24.bpf.c  xppen-ArtistPro16Gen2.bpf.c
src/bpf/userhacks/: 0010-Logitech-MX-Master-3B-middle-button.bpf.c  0010-Logitech-MX-Master-3S-horiz-scroll.bpf.c  0010-Microsoft__Surface_Dial.bpf.c  0010-QuinHeng__PCsensor-FootSwitch.bpf.c  0010-trace_hid_events.bpf.c  10-Huion__H610-Pro.bpf.c  10-Logitech-MX-Master-3B-middle-button.bpf.c  10-Microsoft__Surface_Dial.bpf.c  10-mouse_invert_y.bpf.c  10-noop-probe-fail.bpf.c  10-noop-probe-succeed.bpf.c  10-trace_hid_events.bpf.c  G10-Mechanical-Gaming-Mouse.bpf.c  meson.build  mouse_invert_y.bpf.c  trace_hid_events.bpf.c
test/: __init__.py  meson.build  msmouse.hid.txt  test-wrapper.c  test_lib.py  uhid-test.sh
tools/: generate-hid-report-helpers.py  generate-hwdb.py  hid_report_helpers.h.jinja  show-modalias  sync_with_kernel_tree.py  test_sync_with_kernel_tree.py
