[package]
name = "udev-hid-bpf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libbpf-rs = "0.21"
libbpf-sys = "^1.1.0"
udev =  { version = "^0.6.3", features = ["mio08"] }
mio = { version = "0.8", features = ["os-ext"] }
libc = "0.2"
clap = { version = "~4.4.18", features = ["derive"] }
log = "0.4"
stderrlog = "0.5"
errno = "0.3.3"
regex = "1.9.1"

[build-dependencies]
libbpf-rs = "0.21"
libbpf-cargo = { version = "0.21" }
log = "0.4"
bindgen = "0.66.1"
regex = "1.9.1"
udev =  { version = "^0.6.3", features = ["mio08"] }
