[package]
name = "udev-hid-bpf"
version = "2.1.0-20240704"  # Update meson.build too!
edition = "2021"
license = "GPL-2.0-only"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.79"
libbpf-rs = "0.23"
libbpf-sys = "1.1.0"
udev =  { version = "0.7.0", features = ["mio08"] }
mio = { version = "0.8", features = ["os-ext"] }
libc = "0.2"
clap = { version = "4.5.3", features = ["derive"] }
log = "0.4"
stderrlog = "0.5"
regex = "1.9.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.113"

[dev-dependencies]
tempfile = "3.10.1"

[build-dependencies]
libbpf-rs = "0.23"
libbpf-cargo = { version = "0.23" }
log = "0.4"
regex = "1.9.1"
udev =  { version = "0.7.0", features = ["mio08"] }
