option('udevdir',
       type: 'string',
       value: '/etc/udev',
       description: 'udev base directory, default=/etc/udev')
option('bpfs',
       type: 'combo',
       choices: ['testing', 'stable', 'userhacks'],
       value: 'testing',
       description: 'The subset of BPF programs to build')
option('bpf-filter',
       type: 'string',
       value: '',
       description: 'A comma-separated list of substrings to match against BPF files. Only BPF files matching the filter will be installed.')
option('placeholder-udev-rules-file',
       type: 'boolean',
       value: false,
       description: 'Do not substituate the a @BINDIR@ placeholder in the udev rule')
